--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.40",
     "@babel/core": "7.0.0-beta.40",
-    "@babel/register": "7.0.0-beta.40",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.40",
+    "@babel/plugin-proposal-function-bind": "7.0.0-beta.40",
     "@babel/plugin-transform-react-jsx": "7.0.0-beta.40",
     "@babel/polyfill": "7.0.0-beta.40",
     "@babel/preset-env": "7.0.0-beta.40",
     "@babel/preset-react": "7.0.0-beta.40",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.40",
-    "@babel/plugin-proposal-function-bind": "7.0.0-beta.40",
+    "@babel/register": "7.0.0-beta.40",
     "babel-eslint": "8.2.1",
     "babel-loader": "8.0.0-beta.0",
     "empty-module": "0.0.2",
@@ -72,11 +72,12 @@
     "jss": "^6.5.0",
     "jss-preset-default": "^1.3.1",
     "moment": "^2.18.0",
-    "moment-range": "^2.2.0"
+    "moment-range": "^2.2.0",
+    "react-tether": "^1.0.1"
   },
   "peerDependencies": {
+    "lodash": "^4.17.5",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "lodash": "^4.17.5"
+    "react-dom": "^16.3.1"
   }
 }
