--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "jss-preset-default": "^1.3.1",
     "moment": "^2.18.0",
     "moment-range": "^2.2.0",
-    "react-tether": "^1.0.1"
+    "react-popover": "^0.5.7"
   },
   "peerDependencies": {
     "lodash": "^4.17.5",
