--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-kronos",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "description": "A fast, intuitive, and elegant date and time picker for React.",
-  "main": "dist/bundle.js",
+  "main": "lib/index.js",
   "scripts": {
     "start": "node devServer.js",
     "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:examples",
     "build:lib": "BABEL_ENV=production babel src -d lib",
+    "build:dev": "BABEL_ENV=development babel src -d lib",
     "build:umd": "NODE_ENV=production webpack --config webpack.config.prod.js -p",
     "build:examples": "NODE_ENV=production webpack --config examples/webpack.config.examples.js",
     "clean": "rimraf dist && rimraf lib && npm run clean:examples",
