--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-kronos",
-  "version": "1.9.1",
+  "version": "1.9.2",
   "description": "A fast, intuitive, and elegant date and time picker for React.",
-  "main": "dist/bundle.js",
+  "main": "lib/index.js",
   "scripts": {
     "start": "node devServer.js",
     "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:examples",
