--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-kronos",
   "version": "1.9.2",
   "description": "A fast, intuitive, and elegant date and time picker for React.",
-  "main": "lib/index.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "start": "node devServer.js",
     "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:examples",
