--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-kronos",
-  "version": "1.11.0",
+  "version": "1.12.0",
   "description": "A fast, intuitive, and elegant date and time picker for React.",
   "main": "dist/bundle.js",
   "scripts": {
@@ -72,9 +72,9 @@
     "color": "^0.11.4",
     "jss": "^6.5.0",
     "jss-preset-default": "^1.3.1",
-    "moment-range": "^2.2.0"
   },
   "peerDependencies": {
+    "moment-range": "^2.2.0",
     "moment": "^2.18.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
