--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "classnames": "^2.2.5",
     "color": "^0.11.4",
     "jss": "^6.5.0",
-    "jss-preset-default": "^1.3.1",
+    "jss-preset-default": "^1.3.1"
   },
   "peerDependencies": {
     "moment-range": "^2.2.0",
